--- a/.github/workflows/deployPythonApp.yml
+++ b/.github/workflows/deployPythonApp.yml
@@ -23,4 +23,4 @@ jobs:
       with:
         app-name: kichallaFlaskApp37
         publish-profile: ${{ secrets.kichallapythonapp }}
-        package: $ORYX_OUTPUT
+        package: "$RUNNER_TEMP/oryx-output"
