--- a/.github/workflows/deployPythonApp.yml
+++ b/.github/workflows/deployPythonApp.yml
@@ -26,4 +26,4 @@ jobs:
       with:
         app-name: kichallaFlaskApp37
         publish-profile: ${{ secrets.kichallapythonapp }}
-        package: "/home/runner/work/_temp/_temp/oryx-output"
+        package: "$RUNNER_TEMP/oryx-output"
