--- a/.github/workflows/deployPythonApp.yml
+++ b/.github/workflows/deployPythonApp.yml
@@ -26,4 +26,4 @@ jobs:
       with:
         app-name: kichallaFlaskApp37
         publish-profile: ${{ secrets.kichallapythonapp }}
-        package: ${{ env.RUNNER_TEMP }}/oryx-output
+        package: $RUNNER_TEMP}/oryx-output
